updated dragon shortcut

--- a/rc.conf
+++ b/rc.conf
@@ -761,4 +761,4 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 # dragon
-map <C-d> shell dragon -a -x %p
+map <a-d> shell dragon -a -x %p
