--- a/rc.conf
+++ b/rc.conf
@@ -19,6 +19,8 @@
 # ===================================================================
 # == Options
 # ===================================================================
+#display details
+default_linemode sizehumanreadablemtime
 
 # Which viewmode should be used?  Possible values are:
 #     miller: Use miller columns which show multiple levels of the hierarchy
@@ -28,7 +30,8 @@ set viewmode miller
 #set viewmode multipane
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 1,3,4
+#set column_ratios 1,3,4
+set column_ratios 1,3,3
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -119,7 +122,7 @@ set preview_images_method ueberzug
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
-set w3m_delay 0.02
+# set w3m_delay 0.02
 
 # Manually adjust the w3mimg offset when using a terminal which needs this
 set w3m_offset 0
@@ -166,10 +169,9 @@ set draw_progress_bar_in_status_bar true
 # Outline draws a box around all the columns.
 # Both combines the two.
 set draw_borders separators
-set drawbox separators
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled true
@@ -363,7 +365,8 @@ map ~ set viewmode!
 map i display_file
 map <A-j> scroll_preview 1
 map <A-k> scroll_preview -1
-map ? help
+#map ? help
+map ? console search%space
 map W display_log
 map w taskview_open
 map S shell $SHELL
