--- a/rc.conf
+++ b/rc.conf
@@ -377,7 +377,7 @@ map !  console shell%space
 map @  console -p6 shell  %%s
 map #  console shell -p%space
 map s  console shell%space
-map r  chain draw_possible_programs; console open_with%space
+#map r  chain draw_possible_programs; console open_with%space
 map f  console find%space
 map cd console cd%space
 
@@ -404,29 +404,29 @@ map V       toggle_visual_mode
 map uV      toggle_visual_mode reverse=True
 
 # For the nostalgics: Midnight Commander bindings
-map <F1> help
-map <F2> rename_append
-map <F3> display_file
-map <F4> edit
-map <F5> copy
-map <F6> cut
-map <F7> console mkdir%space
-map <F8> console delete
+#map <F1> help
+#map <F2> rename_append
+#map <F3> display_file
+#map <F4> edit
+#map <F5> copy
+#map <F6> cut
+#map <F7> console mkdir%space
+#map <F8> console delete
 #map <F8> console trash
-map <F10> exit
+#map <F10> exit
 
 # In case you work on a keyboard with dvorak layout
-map <UP>       move up=1
-map <DOWN>     move down=1
-map <LEFT>     move left=1
-map <RIGHT>    move right=1
-map <HOME>     move to=0
-map <END>      move to=-1
-map <PAGEDOWN> move down=1   pages=True
-map <PAGEUP>   move up=1     pages=True
-map <CR>       move right=1
-#map <DELETE>   console delete
-map <INSERT>   console touch%space
+#map <UP>       move up=1
+#map <DOWN>     move down=1
+#map <LEFT>     move left=1
+#map <RIGHT>    move right=1
+#map <HOME>     move to=0
+#map <END>      move to=-1
+#map <PAGEDOWN> move down=1   pages=True
+#map <PAGEUP>   move up=1     pages=True
+#map <CR>       move right=1
+##map <DELETE>   console delete
+#map <INSERT>   console touch%space
 
 # VIM-like
 copymap <UP>       k
@@ -482,7 +482,7 @@ map y. yank name_without_extension
 # Filesystem Operations
 map =  chmod
 
-map cw console rename%space
+map rn console rename%space
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
