--- a/rifle.conf
+++ b/rifle.conf
@@ -139,20 +139,26 @@ mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
 mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 
 #-------------------------------------------
+# 3D files
+#-------------------------------------------
+ext stl|3mf, has prusa-slicer,     X, flag f = prusa-slicer "$@"
+ext scad,    has openscad,         X, flag f = openscad "$@"
+
+#-------------------------------------------
 # Documents
 #-------------------------------------------
-ext pdf, has llpp,     X, flag f = llpp "$@"
-ext pdf, has zathura,  X, flag f = zathura -- "$@"
-ext pdf, has mupdf,    X, flag f = mupdf "$@"
-ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
-ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
-ext pdf, has xpdf,     X, flag f = xpdf -- "$@"
-ext pdf, has evince,   X, flag f = evince -- "$@"
-ext pdf, has atril,    X, flag f = atril -- "$@"
-ext pdf, has okular,   X, flag f = okular -- "$@"
-ext pdf, has epdfview, X, flag f = epdfview -- "$@"
-ext pdf, has qpdfview, X, flag f = qpdfview "$@"
-ext pdf, has open,     X, flag f = open "$@"
+#ext pdf, has llpp,     X, flag f = llpp "$@"
+#ext pdf, has zathura,  X, flag f = zathura -- "$@"
+#ext pdf, has mupdf,    X, flag f = mupdf "$@"
+#ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
+#ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
+#ext pdf, has xpdf,     X, flag f = xpdf -- "$@"
+#ext pdf, has evince,   X, flag f = evince -- "$@"
+#ext pdf, has atril,    X, flag f = atril -- "$@"
+#ext pdf, has okular,   X, flag f = okular -- "$@"
+#ext pdf, has epdfview, X, flag f = epdfview -- "$@"
+#ext pdf, has qpdfview, X, flag f = qpdfview "$@"
+#ext pdf, has open,     X, flag f = open "$@"
 ext pdf, has librewolf-bin,     X, flag f = librewolf-bin "$@"
 
 ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
@@ -234,7 +240,7 @@ mime ^font, has fontforge, X, flag f = fontforge "$@"
 # gnome-terminal/konsole/xterm on the other hand are often installed as part of
 # a desktop environment or as fallback terminal emulators.
 mime ^ranger/x-terminal-emulator, has terminology = terminology -e "$@"
-mime ^ranger/x-terminal-emulator, has kitty = kitty -- "$@"
+#mime ^ranger/x-terminal-emulator, has kitty = kitty -- "$@"
 mime ^ranger/x-terminal-emulator, has alacritty = alacritty -e "$@"
 mime ^ranger/x-terminal-emulator, has sakura = sakura -e "$@"
 mime ^ranger/x-terminal-emulator, has lilyterm = lilyterm -e "$@"
